[VTT] Fix various issues with complicated rendering of VTT cues https://bugs.webkit.org/show_bug.cgi?id=233901

Reviewed by Eric Carlson.

Source/WebCore:

Tests: media/track/track-webvtt-no-snap-to-lines-overlap.html
       media/track/track-webvtt-snap-to-lines-inline-style.html
       media/track/track-webvtt-snap-to-lines-left-right.html

When positioning VTT cues, the spec requires UAs to avoid collisions between cues
by detecting that two cues overlap each other. However, WebKit's implementation
looks for collisions between non-displaying portions of the cues; namely the
::-webkit-media-text-track-display element, which is used to position the displaying
portion of the cue. Instead, the UA should look for collisions between the
::-webkit-media-text-track-display-backdrop element, which holds the background
of the cue, if present.

Add a convenience function to retrieve the backdrop element, and another to retrieve
the cue itself.

Add cast macros for RenderVTTCue to allow downcast<>ing. Use this macro to retrieve
other cues's backdrop elements for collision avoidance.

VTTCueBox::applyCSSProperties() had a section for moving cues into place that is entirely
unneeded if VTTCue::getCSSPosition() returns the pre-calculated m_displayPosition.

RenderVTTCue::initializeLayoutParameters() is a careful implementation of the specification,
accurately layout out cues' initial position so that the text run is exactly at the
bottom of the content box. However, if the cue has a border, padding, or extra height,
this will result in the cue being pushed outside the content box. To account for this,
adjust the inital layout parameter by the difference between the cue text size and the
backdrop element size.

RenderVTTCue::layout() will create a LayoutStateMaintainer, which modifies the behavior of
layout machinery during the layout itself. However, certain child renderers get dramatically
incorrect results for absoluteBoundingRect() unless the maintainer explicitly sets disableState.

* html/track/VTTCue.cpp:
(WebCore::VTTCueBox::applyCSSProperties):
(WebCore::VTTCue::getCSSPosition const):
* html/track/VTTCue.h:
* rendering/RenderObject.h:
(WebCore::RenderObject::isRenderVTTCue const):
* rendering/RenderVTTCue.cpp:
(WebCore::RenderVTTCue::layout):
(WebCore::RenderVTTCue::initializeLayoutParameters):
(WebCore::RenderVTTCue::isOutside const):
(WebCore::RenderVTTCue::overlappingObject const):
(WebCore::RenderVTTCue::overlappingObjectForRect const):
(WebCore::RenderVTTCue::moveIfNecessaryToKeepWithinContainer):
(WebCore::RenderVTTCue::findNonOverlappingPosition const):
(WebCore::RenderVTTCue::repositionGenericCue):
(WebCore::RenderVTTCue::backdropBox const):
(WebCore::RenderVTTCue::cueBox const):

LayoutTests:

* media/track/captions-webvtt/no-snap-to-lines-overlap.vtt: Added.
* media/track/captions-webvtt/snap-to-lines-inline-style.vtt: Added.
* media/track/captions-webvtt/snap-to-lines-left-and-right.vtt: Added.
* media/track/track-webvtt-no-snap-to-lines-overlap-expected.html: Added.
* media/track/track-webvtt-no-snap-to-lines-overlap.html: Added.
* media/track/track-webvtt-snap-to-lines-inline-style-expected.html: Added.
* media/track/track-webvtt-snap-to-lines-inline-style.html: Added.
* media/track/track-webvtt-snap-to-lines-left-right-expected.html: Added.
* media/track/track-webvtt-snap-to-lines-left-right.html: Added.



Canonical link: https://commits.webkit.org/244990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286743 268f45cc-cd09-0410-ab3c-d52691b4dbfc