Source/WebCore/page/CaptionUserPreferences.h
@@ -36,6 +36,7 @@
 
 namespace WebCore {
 
+class CaptionUserPreferencesTestingModeToken;
 class HTMLMediaElement;
 class Page;
 class PageGroup;
@@ -98,8 +99,10 @@ public:
     void setPrimaryAudioTrackLanguageOverride(const String& language) { m_primaryAudioTrackLanguageOverride = language;  }
     String primaryAudioTrackLanguageOverride() const;
 
-    virtual bool testingMode() const { return m_testingMode; }
-    void setTestingMode(bool override) { m_testingMode = override; }
+    virtual bool testingMode() const { return m_testingModeCount; }
+
+    friend class CaptionUserPreferencesTestingModeToken;
+    UniqueRef<CaptionUserPreferencesTestingModeToken> createTestingModeToken() { return makeUniqueRef<CaptionUserPreferencesTestingModeToken>(*this); }
     
     PageGroup& pageGroup() const { return m_pageGroup; }
 
@@ -111,6 +114,14 @@ protected:
     void endBlockingNotifications();
 
 private:
+    void incrementTestingModeCount() { ++m_testingModeCount; }
+    void decrementTestingModeCount()
+    {
+        ASSERT(m_testingModeCount);
+        if (m_testingModeCount)
+            --m_testingModeCount;
+    }
+
     void timerFired();
     void notify();
     Page* currentPage() const;
@@ -123,8 +134,25 @@ private:
     String m_captionsStyleSheetOverride;
     String m_primaryAudioTrackLanguageOverride;
     unsigned m_blockNotificationsCounter { 0 };
-    bool m_testingMode { false };
     bool m_havePreferences { false };
+    unsigned m_testingModeCount { 0 };
+};
+
+class CaptionUserPreferencesTestingModeToken {
+    WTF_MAKE_FAST_ALLOCATED;
+public:
+    CaptionUserPreferencesTestingModeToken(CaptionUserPreferences& parent)
+        : m_parent(parent)
+    {
+        parent.incrementTestingModeCount();
+    }
+    ~CaptionUserPreferencesTestingModeToken()
+    {
+        if (m_parent)
+            m_parent->decrementTestingModeCount();
+    }
+private:
+    WeakPtr<CaptionUserPreferences> m_parent;
 };
     
 }
