Source/WebCore/rendering/RenderVTTCue.h
@@ -42,13 +42,15 @@ public:
     RenderVTTCue(VTTCueBox&, RenderStyle&&);
 
 private:
+    bool isRenderVTTCue() const final { return true; }
+
     void layout() override;
 
     bool isOutside() const;
     bool rectIsWithinContainer(const IntRect&) const;
     bool isOverlapping() const;
-    RenderObject* overlappingObject() const;
-    RenderObject* overlappingObjectForRect(const IntRect&) const;
+    RenderVTTCue* overlappingObject() const;
+    RenderVTTCue* overlappingObjectForRect(const IntRect&) const;
     bool shouldSwitchDirection(LegacyInlineFlowBox*, LayoutUnit) const;
 
     void moveBoxesByStep(LayoutUnit);
@@ -62,10 +64,15 @@ private:
     void repositionCueSnapToLinesNotSet();
     void repositionGenericCue();
 
+    RenderBlockFlow& backdropBox() const;
+    RenderInline& cueBox() const;
+
     VTTCue* m_cue;
     FloatPoint m_fallbackPosition;
 };
 
 } // namespace WebCore
+
+SPECIALIZE_TYPE_TRAITS_RENDER_OBJECT(RenderVTTCue, isRenderVTTCue())
 
 #endif // ENABLE(VIDEO)
